fix: add scroll to dropdown on mobile
- you can now scroll through the components that appear after selecting the selector

--- a/src/components/Dropdowns/DropdownFilter/DropdownFilter.module.scss
+++ b/src/components/Dropdowns/DropdownFilter/DropdownFilter.module.scss
@@ -54,6 +54,8 @@
     border-left: none;
     border-right: none;
     border-bottom: none;
+    overflow-y: auto;
+    max-height: 300px;
   }
 }
 
